--- a/index.html
+++ b/index.html
@@ -9,39 +9,30 @@
     </head>
 
     <body>
-        <div class="container">
-            <h2>Carousel Examples</h2>
-            <div id="myCarousel" class="carosel slide" data-ride="carousel">
-                <!--Indicator-->
-                <ol class="carousel-indicator">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <!--Wrapper for sliders-->
-                <div class="carousel-inner">
-                    <di class="item active">
-                        <img src="car.webp" alt="Los Angeles" style="width: 100%;">
-                    </div>
-                    <div class="item">
-                        <img src="car2.png" alt="Chicago" style="width: 100%;">
-                    </div>
-
-                    <div>
-                        <img src="car3.png" alt="New York" style="width: 100%;">
-                    </div>
+        <div class="row">
+            <div class="col-4">
+                <div id="simple-list-example" class="d-flex flex-column gap-2 simple-list-example-scrollspy text-center">
+                    <a class="p-1 rounded" href="#simple-list-item-1">Item 1</a>
+                    <a class="p-1 rounded" href="#simple-list-item-2">Item 2</a>
+                    <a class="p-1 rounded" href="#simple-list-item-3">Item 3</a>
+                    <a class="p-1 rounded" href="#simple-list-item-4">Item 4</a>
+                    <a class="p-1 rounded" href="#simple-list-item-5">Item 5</a>
                 </div>
-
-                <!--Left and right controls-->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-next=""="">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
-        </div>
+            <div class="col-8">
+                <div data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true"
+                    class="scrollspy-example" tabindex="0">
+                    <h4 id="simple-list-item-1">Item 1</h4>
+                    <p>...</p>
+                    <h4 id="simple-list-item-2">Item 2</h4>
+                    <p>...</p>
+                    <h4 id="simple-list-item-3">Item 3</h4>
+                    <p>...</p>
+                    <h4 id="simple-list-item-4">Item 4</h4>
+                    <p>...</p>
+                    <h4 id="simple-list-item-5">Item 5</h4>
+                    <p>...</p>
+                </div>
+            </div>    </div>
     </body>
 </html>
